--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.crashdemons</groupId>
     <artifactId>TrophyLuckModifier</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>com.github.crashdemons</groupId>
             <artifactId>MiningTrophies</artifactId>
-            <version>0.7.3-SNAPSHOT</version>
+            <version>0.7.3-DEBUG</version>
         </dependency>
         <dependency>
             <groupId>org.shininet.bukkit</groupId>
