--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,12 @@
         <dependency>
             <groupId>com.github.crashdemons</groupId>
             <artifactId>MiningTrophies</artifactId>
-            <version>0.7.3-DEBUG</version>
+            <version>0.7.3</version>
         </dependency>
         <dependency>
             <groupId>org.shininet.bukkit</groupId>
             <artifactId>PlayerHeads-api</artifactId>
-            <version>4.10.0-SNAPSHOT</version>
+            <version>5.1.0-SNAPSHOT</version>
         </dependency>
   	<dependency>
   		<groupId>junit</groupId>
@@ -119,7 +119,7 @@
                     <includes>
                         <include>org.bukkit</include>
                         <include>com.github.crashdemons</include>
-                        <include>org.shininet</include>
+                        <include>org.shininet.bukkit</include>
                     </includes>
                 </configuration>
                 <executions>
