--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>org.shininet.bukkit</groupId>
             <artifactId>PlayerHeads-api</artifactId>
-            <version>5.3.0-SNAPSHOT</version>
+            <version>[5.2.9-SNAPSHOT]</version>
         </dependency>
   	<dependency>
   		<groupId>junit</groupId>
@@ -130,7 +130,7 @@
                             <allowSnapshots>true</allowSnapshots>
                         </configuration>
                         <goals>
-                            <goal>use-latest-versions</goal>
+                            <!--<goal>use-latest-versions</goal>-->
                         </goals>
                     </execution>
                 </executions>
@@ -197,7 +197,7 @@
                                         <artifactId>versions-maven-plugin</artifactId>
                                         <versionRange>[2.2,)</versionRange>
                                         <goals>
-                                            <goal>use-latest-versions</goal>
+                                            <!-- <goal>use-latest-versions</goal> -->
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
