--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <groupId>com.github.crashdemons</groupId>
             <artifactId>MiningTrophies</artifactId>
             <version>0.8.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.bukkit</groupId>
+                    <artifactId>bukkit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.shininet.bukkit</groupId>
