add luck rates debug option

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,3 +7,5 @@ mining-luck-rate: 0.2
 #print luck attribute values debug entry to console when a head roll event occurs. (used for development testing / testing item attributes only).
 debug-luck-attribute: false
 
+#print luck inreases to droprate
+debug-luck-increase: false
